--- a/Dockerfile-amd64
+++ b/Dockerfile-amd64
@@ -61,7 +61,7 @@ RUN R --no-echo --no-restore --no-save -e "remotes::install_github('mojaveazure/
 RUN R --no-echo --no-restore --no-save -e "remotes::install_github('elolab/iloreg', ref='250a4facdaa66977a529fee02b4a8927364b43df')"
 
 # Install CellTypist python package and dependencies: 
-RUN pip3 install 'numpy==1.20.3' 'scanpy==1.8.2' \
+RUN pip3 install 'matplotlib==3.6.0' 'numpy==1.20.3' 'scanpy==1.8.2' \
     'anndata==0.7.8' 'celltypist==1.0.0' 
 RUN R --no-echo --no-restore --no-save -e "BiocManager::install('LoomExperiment')"
 RUN R --no-echo --no-restore --no-save -e "remotes::install_github('cellgeni/sceasy')"
